# new_C

Cguests/: CMakeLists.txt  main.cpp
Figny/: CMakeLists.txt  main.cpp
Function/: CMakeLists.txt  main.cpp
Hello_world/: CMakeLists.txt  main.cpp  mainwindow.cpp
Konsole/: CMakeLists.txt  Music.cpp  main.cpp  second_file.cpp
Music/: CMakeLists.txt  main.cpp
Polindromi/: CMakeLists.txt  main.cpp
Ptr/: CMakeLists.txt  main.cpp
Saper/: CMakeLists.txt  main.cpp
Sostavnie_tipi_dannix/: CMakeLists.txt  main.cpp
containers/: main.cpp  main.cpp.autosave
